compiler/tests/template/fail/random_wrong_length.jazz
export fn main () -> reg u8 {
  stack u8[1] s;
  reg u64 len = 1;
  s = #randombytes{2}(s, len); // s is of length 1, not 2
  reg u8 res = s[0];
  return res;
}
